--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,19 @@ html, body {
       min-height: 100vh;
 }
 
+@media only screen and (max-width: 414px) {
+    .form-content .form-items {
+        border: 3px solid #fff;
+        padding: 41px;
+        display: inline-block;
+        width: 100%;
+        min-width: 368px;
+        border-radius: 10px;
+        text-align: left;
+        transition: all 0.4s ease;
+    }
+  }
+
 .form-holder .form-content {
     position: relative;
     text-align: center;
